# ddddocr

./: README.md  pyproject.toml  requirements.txt  setup.py
ddddocr/: README.md  __init__.py  __main__.py  requirements.txt
ddddocr/api/: __init__.py  __main__.py  app.py  mcp.py  models.py  routes.py  server.py
ddddocr/compat/: __init__.py  v1.py
ddddocr/core/: __init__.py  base.py  detection_engine.py  ocr_engine.py  slide_engine.py
ddddocr/models/: __init__.py  charset_manager.py  model_loader.py
ddddocr/preprocessing/: __init__.py  color_filter.py  image_processor.py
ddddocr/utils/: __init__.py  compat.py  exceptions.py  image_io.py  validators.py
examples/: README.md
